[tool.poetry]
name = "one_to_many"
version = "0.1.0"
description = ""
authors = ["k-rea <kitahara@k-rea.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
